Add player attack buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+  <h1>Rock, Paper, or Scissors</h1>
+
+  <h4>Choose your attack:</h4>
+  <button id="player-rock">Rock</button>
+  <button id="player-paper">Paper</button>
+  <button id="player-scissors">Scissors</button>
 
 </body>
 
