--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <button id="player-paper">Paper</button>
   <button id="player-scissors">Scissors</button>
 
+  <div class="results"></div>
+  <div class="score"></div>
 </body>
 
 </html>
